新增详情页

--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -20,3 +20,14 @@
 .linear-gradient(){
     background: linear-gradient(146deg, #62dcfd, #409bfd);
 }
+
+.price(){
+    color: #f60;
+    >span{
+        font-size: 28px;
+    }
+    >b{
+        font-family: Arial;
+        font-size: 42px;
+    }
+}
