--- a/source/src/assets/less/quick.less
+++ b/source/src/assets/less/quick.less
@@ -35,6 +35,16 @@
   background-color: #fff;
 }
 
+.abtn {
+  &.color2 { 
+    background-color: #e64a47;
+  }
+  &.color3 { 
+    background-color: #f60;
+  }
+
+}
+
 
 
 .icon-activity:before {
