新增课程分类

--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -9,6 +9,12 @@
 @color8: #eee;
 @br: 8px;
 
+.text-overflow(){
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .text-row-overflow(@row){
     overflow:hidden; 
     text-overflow:ellipsis;
