调整页面布局

--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -6,7 +6,7 @@
 @color4: #999;
 @color5: rgba(255, 255, 255, 0.6);
 @color7: #cacaca;
-@color8: #eee;
+@color8: #ddd;
 @br: 8px;
 
 .text-overflow(){
@@ -25,6 +25,10 @@
 
 .linear-gradient(){
     background: linear-gradient(146deg, #62dcfd, #409bfd);
+}
+
+.overflow-scrolling(){
+    -webkit-overflow-scrolling: touch;
 }
 
 .price(){
