修改展现形式

--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -29,6 +29,9 @@
 
 .overflow-scrolling(){
     -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 .price(){
