--- a/source/src/assets/less/quick.less
+++ b/source/src/assets/less/quick.less
@@ -1,3 +1,5 @@
+@import './common.less';
+
 .clearfix:after {
   display: block;
   clear: both;
@@ -36,6 +38,9 @@
 }
 
 .abtn {
+  &.color1 { 
+    .linear-gradient();
+  }
   &.color2 { 
     background-color: #e64a47;
   }
