修改地址指向

--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -1,6 +1,6 @@
 @HeaderFixedHeight :80px;
 @NavigationHeight: 88px;
-@color1: #40bbff;
+@color1: #72A3FF;
 @color2: #333;
 @color3: #666;
 @color4: #999;
@@ -24,7 +24,7 @@
 }
 
 .linear-gradient(){
-    background: linear-gradient(146deg, #62dcfd, #409bfd);
+    background: linear-gradient(146deg, #ACABFF, #72A3FF);
 }
 
 .overflow-scrolling(){
