--- a/source/src/assets/less/common.less
+++ b/source/src/assets/less/common.less
@@ -1,12 +1,13 @@
 @HeaderFixedHeight :80px;
 @NavigationHeight: 80px;
-@color1: #72A3FF;
+@color1: #644900;
 @color2: #333;
 @color3: #666;
 @color4: #999;
 @color5: rgba(255, 255, 255, 0.6);
 @color7: #cacaca;
 @color8: #ddd;
+@color9:#644900;
 @br: 8px;
 
 .text-overflow(){
@@ -24,7 +25,7 @@
 }
 
 .linear-gradient(){
-    background: linear-gradient(146deg, #ACABFF, #72A3FF);
+    background: linear-gradient(146deg, #fffca1, #ffd97a);
 }
 
 .overflow-scrolling(){
